--- a/src/reference/01-General-Info/90-Changes/26-sbt-1.4-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/26-sbt-1.4-Release-Notes.md
@@ -102,7 +102,7 @@ sbt 1.4.0 adds an official native thin client called `sbtn` that supports all ta
 \$ sbt --client shutdown
 ```
 
-The native thin client will run sbt (server) as a daemon, which avoids the JVM spinup and loading time for the second call onwards. This could an option if you would like to use sbt from the system shell such as Zsh and Fish.
+The native thin client will run sbt (server) as a daemon, which avoids the JVM spinup and loading time for the second call onwards. This could be an option if you would like to use sbt from the system shell such as Zsh and Fish.
 
 Remember to call `sbt --client shutdown` when you're done! If you want to enable this via an environment variable you can set `SBT_NATIVE_CLIENT` to `true`.
 `sbtn` binary files are also available from https://github.com/sbt/sbtn-dist/releases/tag/v1.4.0
