--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -53,7 +53,7 @@ always write it in all lowercase letters. However, we are cool with [酢豚][sub
 
 #### How do I get help?
 
--  See [Support](https://www.scala-sbt.org/support.html#how-can-I-get-help)
+-  See [How can I get help?](https://www.scala-sbt.org/community.html#how-can-I-get-help)
 
 #### How do I report a bug?
 
