Fix a few broken links

--- a/src/reference/00.md
+++ b/src/reference/00.md
@@ -15,6 +15,7 @@ out: index.html
   [Discussions]: https://github.com/sbt/sbt/discussions
   [Faq]: Faq.html
   [Apidoc]: $apidoc_base$/api/sbt/index.html
+  [Get-Help]: https://www.scala-sbt.org/community.html#how-can-I-get-help
 
 sbt Reference Manual
 ====================
@@ -37,9 +38,9 @@ All documentation may be found via the table of contents included on the left of
 
 See also [Frequently asked question][Faq].
 
-See [Support][Support] on where you can get help about sbt.
+See [How can I get help?][Get-Help] for where you can get help about sbt.
 For discussing sbt development, use [Discussions][Discussions].
-To stay up to date about the news related to sbt, follow us [@scala_sbt](https://twitter.com/scala_sbt).
+To stay up to date about the news related to sbt, follow us [@scala\_sbt](https://twitter.com/scala_sbt).
 
 ### Features of sbt
 
