Update on installing Temurin

--- a/src/reference/es/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/es/00-Getting-Started/01-Setup/00.md
@@ -15,7 +15,7 @@ Instalar sbt
 
 Para crear un proyecto sbt necesitarás realizar los siguientes pasos:
 
--   Instalar JDK (recomendamos AdoptOpenJDK JDK 8 u AdoptOpenJDK JDK 11).
+-   Instalar JDK (recomendamos Eclipse Adoptium Temurin JDK 8, 11, u 17).
 -   Instalar sbt.
 -   Configurar un proyecto [hola mundo][Hello] simple
 -   Continuar con [Ejecución][Running] para aprender cómo ejecutar sbt.
