--- a/src/reference/ja/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/ja/00-Getting-Started/01-Setup/00.md
@@ -15,7 +15,7 @@ sbt のインストール
 
 sbt プロジェクトを作るためには、以下の手順をたどる必要がある:
 
- - JDK をインストールする。(AdoptOpenJDK JDK 8 もしくは AdoptOpenJDK JDK 11 を推奨)
+ - JDK をインストールする。(Eclipse Adoptium Temurin JDK 8、11 もしくは 17 を推奨)
  - sbt をインストールする。
  - 簡単な [hello world][Hello] プロジェクトをセットアップする。
  - [実行する][Running]を読んで、sbt の実行方法を知る。
