--- a/src/reference/zh-cn/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/zh-cn/00-Getting-Started/01-Setup/00.md
@@ -15,6 +15,7 @@ out: Setup.html
 
 创建一个 sbt 工程，你需要经过以下几步：
 
+-   安装 JDK (建议使用 Eclipse Adoptium Temurin JDK 8, 11, 或 17)。
 -   安装 sbt 并且创建脚本来运行它。
 -   建立一个简单的 [hello world][Hello] 工程
     -   创建一个工程目录并且将源文件放在其中。
