use new slash syntax

--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -207,9 +207,9 @@ This run task can be configured individually by specifying the task key
 in the scope. For example:
 
 ```scala
-fork in myRunTask := true
+myRunTask / fork := true
 
-javaOptions in myRunTask += "-Xmx6144m"
+myRunTask / javaOptions += "-Xmx6144m"
 ```
 
 #### How should I express a dependency on an outside tool such as proguard?
