update some url
use https instead of http if possible

--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -47,7 +47,7 @@ Nowadays we just call sbt "sbt", and to reinforce that the name is no longer an 
 always write it in all lowercase letters. However, we are cool with [酢豚][subuta] (subuta) as a nickname.
 
 [@harrah]: https://github.com/harrah
-[sbt 0.3.2 announcement]: http://www.scala-lang.org/old/node/392.html
+[sbt 0.3.2 announcement]: https://www.scala-lang.org/old/node/392.html
 [initialism]: https://en.oxforddictionaries.com/definition/initialism
 [subuta]: https://ja.wikipedia.org/wiki/%E9%85%A2%E8%B1%9A
 
