moves setup notes to CLI Setup Notes used to be a doc describing how to create an sbt script. This way of setting up sbt is now obsolete. The page has been removed and the relevant parts have been moved to the Command-line reference page

--- a/src/reference/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/00-Getting-Started/01-Setup/00.md
@@ -5,7 +5,7 @@ out: Setup.html
   [Basic-Def]: Basic-Def.html
   [Hello]: Hello.html
   [Running]: Running.html
-  [Setup-Notes]: ../docs/Setup-Notes.html
+  [Command-Line-Reference]: ../docs/Command-Line-Reference.html
   [Mac]: Installing-sbt-on-Mac.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
@@ -30,5 +30,5 @@ installation steps for [macOS][Mac], [Windows][Windows], or
 
 ### Tips and Notes
 
-If you have any trouble running sbt, see [Setup Notes][Setup-Notes] on
-terminal encodings, HTTP proxies, and JVM options.
+If you have any trouble running sbt, see [Command line reference][Command-Line-Reference] on
+JVM options.
