Update some url

--- a/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
@@ -4,7 +4,7 @@ out: Coding-Guideline.html
 
   [jsuereth2012]: http://jsuereth.com/scala/2012/04/22/scaladays.html
   [pins_trait127]: http://www.artima.com/pins1ed/traits.html#12.7
-  [mima]: https://github.com/lightbend/migration-manager
+  [mima]: https://github.com/lightbend/mima
 
 sbt Coding Guideline
 --------------------
