add .html route slugs to download, learn, community

--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -8,7 +8,7 @@ title: "404: Page not found"
 
 * [Home page](/index.html)
 * [Learn](/learn.html)
-* [Downloads](/downloads.html)
+* [Download](/download.html)
 * [StackOverflow](https://stackoverflow.com/questions/tagged/sbt)
 
 ### Help us fix this site
